[project]
name = "p621"
version = "0.0.1"
authors = [
  { name="I'd Eat Some Fish", email="ideatsomefish@gmail.com" },
]
description = "WIP E621 wrapper x3"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/IdEatSomeFish/p621"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"